--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,4 @@ jobs:
         server: ftp.atlasfamiliar.com
         username: atlasfamiliar.com
         password: ${{ secrets.ftp_password }}
+        local-dir: ./html/
