--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,4 @@ jobs:
         server: ftp.atlasfamiliar.com
         username: atlasfamiliar.com
         password: ${{ secrets.ftp_password }}
-        protocol: ftps
-        local-dir: ./html/
+        server-dir: ./html/
